:bug: Fixes spacing when no branch is visible (#14)

--- a/styles/status-bar.less
+++ b/styles/status-bar.less
@@ -58,11 +58,11 @@ status-bar .git-status {
 
 status-bar .git-branch.inline-block {
   margin-left: 0;
+  padding-right: 0;
 }
 
 status-bar .git-status.inline-block {
   margin-left: 0;
-  padding-left: 0;
   padding-right: @status-bar-spacing;
 }
 
